// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`todo Header matches snapshot 1`] = `
<DocumentFragment>
  <h1
    class="Todo-header"
  >
    Todo list
  </h1>
</DocumentFragment>
`;

exports[`todo List Item matches snapshot 1`] = `
<DocumentFragment>
  <li
    class="Todo-item"
    data-testid="todo-item"
  >
    <span
      aria-hidden="true"
      class="icon"
      data-testid="todo-status"
    >
      [  ]
    </span>
    <div
      class="undone"
      data-testid="todo-status-class"
    >
      learn react
    </div>
    <button
      class="close"
      data-testid="todo-button"
      type="button"
    >
      ×
    </button>
  </li>
</DocumentFragment>
`;

exports[`todo form matches snapshot 1`] = `
<DocumentFragment>
  <form
    class="form-inline"
  >
    <input
      class="form-control"
      data-testid="todo-input"
      placeholder="add a new todo..."
      type="text"
    />
    <button
      class="submit"
      data-testid="todo-form-button"
      type="submit"
    >
      +
    </button>
  </form>
</DocumentFragment>
`;

exports[`todo list matches snpashot 1`] = `
<DocumentFragment>
  <ul
    class="Todo-group"
    data-testid="todo-list"
  >
     
    <li
      class="Todo-item"
      data-testid="todo-item"
    >
      <span
        aria-hidden="true"
        class="icon"
        data-testid="todo-status"
      >
        [  ]
      </span>
      <div
        class="undone"
        data-testid="todo-status-class"
      >
        learn react
      </div>
      <button
        class="close"
        data-testid="todo-button"
        type="button"
      >
        ×
      </button>
    </li>
    <li
      class="Todo-item"
      data-testid="todo-item"
    >
      <span
        aria-hidden="true"
        class="icon"
        data-testid="todo-status"
      >
        [  ]
      </span>
      <div
        class="undone"
        data-testid="todo-status-class"
      >
        brush teeth
      </div>
      <button
        class="close"
        data-testid="todo-button"
        type="button"
      >
        ×
      </button>
    </li>
    <li
      class="Todo-item"
      data-testid="todo-item"
    >
      <span
        aria-hidden="true"
        class="icon"
        data-testid="todo-status"
      >
        [X]
      </span>
      <div
        class="done"
        data-testid="todo-status-class"
      >
        walk dog
      </div>
      <button
        class="close"
        data-testid="todo-button"
        type="button"
      >
        ×
      </button>
    </li>
     
  </ul>
</DocumentFragment>
`;
